--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>My Blog</title>
     <body>
         <h1>Kia Ora Taiao! (Hello World!)</h1>
-        <p>This is the beginning of my hebsite home page.</p>
+        <p>This is the beginning of my website home page.</p>
         <p>It will eventually contain a list of links to all my blogs.</p>
     </body>
 </html>
