work on the blog

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         </button>
         <div class="dropdown-content">
           <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/about_me.html">General</a>
-          <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/learning-plan.html">Learning Plan</a>
         </div>
       </div>
         <div class="dropdown">
@@ -43,14 +42,25 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/sprint1-technical.html">Sprint 1</a>
-              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/sprint2-technical.html">Sprint 2</a>
+              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/sprint1-technical.html">Stories and Legends(sprint 1)</a>
+              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/sprint2-technical.html">CSS box Model(Sprint 2)</a>
               <a href="#">Sprint 3</a>
               <a href="#">Sprint 4</a>
               <a href="#">Sprint 5</a>
             </div>
           </div>
-        <a href="#">Cultural</a>
+          <div class="dropdown">
+            <button class="dropbtn">Cultural
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/values.html">Identity, Values, Strengths(print 1)</a>
+              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/learning-plan.html">Learning Plan(Sprint 2)</a>
+              <a href="#">Sprint 3</a>
+              <a href="#">Sprint 4</a>
+              <a href="#">Sprint 5</a>
+            </div>
+          </div>
         <a href="https://github.com/dylan-hodges313">Github</a>
         <a>Home</a>
         <a href="#" class="right">contact</a>
