work on the blog

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/values.html">Identity, Values, Strengths(Sprint 1)</a>
-              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/learning-plan.html">Learning Plan(Sprint 2)</a>
+              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/Sprint1-cultural.html">Identity, Values, Strengths(Sprint 1)</a>
+              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/sprint2-cultural.html">Learning Plan(Sprint 2)</a>
               <a href="#">Sprint 3</a>
               <a href="#">Sprint 4</a>
               <a href="#">Sprint 5</a>
