work on the blog

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
         <a href="https://github.com/dylan-hodges313">Github</a>
         <a>Home</a>
-        <a href="#" class="right">contact</a>
+        <a href="https://www.youtube.com/watch?v=zqIzIkJbvq8" class="right">contact</a>
     </div>
 <br>
 <img src="images/profile-picture.jpg" height="300" class="center image-border">
