work on the blog

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/about_me.html">General</a>
+          <a href="dylan.hodges313.github.io/blog/about_me.html">General</a>
         </div>
       </div>
         <div class="dropdown">
