work on the blog

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <a href="https://www.youtube.com/watch?v=zqIzIkJbvq8" class="right">contact</a>
     </div>
 <br>
-<img src="images/profile-picture.jpg" height="300" class="center image-border">
+<img src="dylan.hodges313.github.io/images/profile-picture.jpg" height="300" class="center image-border">
 <br>
     <div class="text-box" id="home-text">
         <p>
