--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/sprint1-technical.html">Stories and Legends(Sprint 1)</a>
+              <a href="./blog/sprint1-technical.html">Stories and Legends(Sprint 1)</a>
               <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/sprint2-technical.html">CSS box Model(Sprint 2)</a>
               <a href="#">Sprint 3</a>
               <a href="#">Sprint 4</a>
