--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/Sprint1-cultural.html">Identity, Values, Strengths(Sprint 1)</a>
+              <a href="./blog/Sprint1-cultural.html">Identity, Values, Strengths(Sprint 1)</a>
               <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/sprint2-cultural.html">Learning Plan(Sprint 2)</a>
               <a href="#">Sprint 3</a>
               <a href="#">Sprint 4</a>
