--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Blog(dylan Hodges)</title>
 <meta charset="UTF-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="styles/main.css" media="screen"/>
+        <link rel="stylesheet" type="text/css" href="./styles/main.css" media="screen"/>
 </head>
 <body class="body">
     <header>
