work on the blog

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="dylan.hodges313.github.io/blog/about_me.html">General</a>
+          <a href="dylan.hodges313.github.io/blog/About_Me.html">General</a>
         </div>
       </div>
         <div class="dropdown">
@@ -43,7 +43,7 @@
             </button>
             <div class="dropdown-content">
               <a href="./blog/sprint1-technical.html">Stories and Legends(Sprint 1)</a>
-              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/sprint2-technical.html">CSS box Model(Sprint 2)</a>
+              <a href="./blog/sprint2-technical.html">CSS box Model(Sprint 2)</a>
               <a href="#">Sprint 3</a>
               <a href="#">Sprint 4</a>
               <a href="#">Sprint 5</a>
@@ -55,7 +55,7 @@
             </button>
             <div class="dropdown-content">
               <a href="./blog/Sprint1-cultural.html">Identity, Values, Strengths(Sprint 1)</a>
-              <a href="c:users/dylan/desktop/dev-academy/dylan.hodges313.github.io/blog/sprint2-cultural.html">Learning Plan(Sprint 2)</a>
+              <a href="./blog/sprint2-cultural.html">Learning Plan(Sprint 2)</a>
               <a href="#">Sprint 3</a>
               <a href="#">Sprint 4</a>
               <a href="#">Sprint 5</a>
