--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="./blog/about-me.html">General</a>
+          <a href="./blog/About_Me.html">General</a>
         </div>
       </div>
         <div class="dropdown">
