--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="dropdown-content">
               <a href="./blog/sprint1-cultural.html">Identity, Values, Strengths(Sprint 1)</a>
               <a href="./blog/sprint2-cultural.html">Learning Plan(Sprint 2)</a>
-              <a href="#">Sprint 3</a>
+              <a href="./blog/sprint3-cultural.html">EQ vs IQ(Sprint 3)</a>
               <a href="#">Sprint 4</a>
               <a href="#">Sprint 5</a>
             </div>
