Add sprint 4 technical blog

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="./blog/sprint1-technical.html">Stories and Legends(Sprint 1)</a>
               <a href="./blog/sprint2-technical.html">CSS box Model(Sprint 2)</a>
               <a href="./blog/sprint3-technical.html">JavaScript(Sprint 3)</a>
-              <a href="#">Sprint 4</a>
+              <a href="./blog/sprint4-technical.html">Problem Solving(Sprint 4)</a>
               <a href="#">Sprint 5</a>
             </div>
           </div>
